tests/snapshots/errors/field_assign_type_error.mc
struct Point {
    x: int,
    y: int
}
var p = Point { x: 10, y: 20 };
p.x = "hello";
